--- a/site exemplo/index.html
+++ b/site exemplo/index.html
@@ -8,6 +8,15 @@
 <body>
     <h1>mais um curso</h1>
     <hr>
+    <h2>mais um curso</h2>
+    <hr>
+    <h3>mais um curso</h3>
+    <hr>
+    <h4>mais um curso</h4>
+    <hr>
+    <h5>mais um curso</h5>
+    <hr>
+    <h6>mais um curso</h6>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore eius tempora facere labore unde? Minima natus aliquid error ducimus repellat. Reiciendis explicabo dolorum nulla nobis rem voluptates, possimus eius totam.</p>
 </body>
 </html>
