mudie mais uma vez

--- a/site exemplo/index.html
+++ b/site exemplo/index.html
@@ -17,5 +17,6 @@
     <h5>mais um curso</h5>
     <hr>
     <h6>mais um curso</h6>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore eius tempora facere labore unde? Minima natus aliquid error ducimus repellat. <i>Reiciendis explicabo dolorum nulla nobis</i> rem voluptates, possimus eius totam.</p>
 </body>
 </html>
