--- a/site exemplo/index.html
+++ b/site exemplo/index.html
@@ -17,6 +17,23 @@
     <h5>mais um curso</h5>
     <hr>
     <h6>mais um curso</h6>
+
+    
+     <!-- tag i -->
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore eius tempora facere labore unde? Minima natus aliquid error ducimus repellat. <i>Reiciendis explicabo dolorum nulla nobis</i> rem voluptates, possimus eius totam.</p>
+
+ <!-- tag strong -->
+    <p>Lorem <strong> ipsum dolor sit amet consectetur adipisicing elit. Eveniet quaerat</strong> aliquam temporibus repudiandae sequi blanditiis illum, quam libero quibusdam repellendus voluptate, labore, in minima illo molestias placeat quae sunt quod?</p>
+
+
+ <!-- tag b -->
+    <p><b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, quos asperiores est enim eos similique possimus id natus beatae modi. Nemo sequi fuga at dolorem officia iure quidem iste pariatur!</b></p>
+
+     <!-- tag em -->
+    <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, ea repellendus eligendi consequuntur eum, totam fugit illum dolorum ratione ipsa enim quam dolores nemo doloribus quasi labore sunt molestias esse.</em></p>
+
+     <!-- mark em -->
+    <p><mark>ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur impedit iure sapiente sed maiores earum voluptates officia in ex omnis alias culpa rerum, excepturi nulla amet ipsum est. Laborum, sint.</mark> </p>
+
 </body>
 </html>
