--- a/site exemplo/index.html
+++ b/site exemplo/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
+       <meta name="viewport" content="width=, initial-scale=1.0">
     <title>meu primeiro site</title>
 </head>
 <body>
